--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,9 @@
   <div class="col-lg-12 topBar">
     <p>
       <form>
-        <input type="text" id="hallucinationTitle"></input>
-        <textarea id="hallucinationText" placeholder="your hallucination"></textarea>
-        <button id="saveButton">save</button>
+        <p><input type="text" id="hallucinationTitle"></input></p>
+        <p><textarea id="hallucinationText" placeholder="your hallucination"></textarea></p>
+        <p><button id="saveButton">save</button></p>
       </form>
     </p>
   </div>
