fixes of first commit

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,8 +2,8 @@
   <div class="col-lg-12 topBar">
     <p>
       <form>
-        <p><input type="text" id="hallucinationTitle"></input></p>
-        <p><textarea id="hallucinationText" placeholder="your hallucination"></textarea></p>
+        <p><input type="text" id="hallucinationTitle" placeholder="the title of your dream"></input></p>
+        <p><textarea id="hallucinationText" placeholder="your dream text"></textarea></p>
         <p><button id="saveButton">save</button></p>
       </form>
     </p>
