--- a/app/css/style.css
+++ b/app/css/style.css
@@ -59,10 +59,6 @@ footer{}
   margin-bottom: 2em;
 }
 
-.tt-suggestion,.tt-menu{
-  background-color: white;
-}
-
 p{
   color: #000;
   letter-spacing: initial;
@@ -106,6 +102,7 @@ input{
 }
 
 input[type="text"], textarea{
+  width: 50%;
   border-radius: 5px;
   padding: 0.5em;
 }
