--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 <div  id="homeContainer">
-  <div class="col-lg-12 topBar">
+  <div class="col-lg-9 topBar">
     <p>
       <form>
         <p><input type="text" id="hallucinationTitle" placeholder="the title of your dream"></input></p>
@@ -19,3 +19,15 @@
     </ul>
   </div>
 </div>
+<aside>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- see.through.glass -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6458298285737303"
+       data-ad-slot="8449774206"
+       data-ad-format="auto"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</aside>
