--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -19,7 +19,7 @@
     </ul>
   </div>
 </div>
-<aside>
+<aside class="col-lg-3 col-lg-push-3">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- see.through.glass -->
   <ins class="adsbygoogle"
