--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,139 +1,21 @@
-html{}
-
 body{
-  font-family: 'questaregular', serif;
-  background: transparent;
-  background-image: url(../images/dream1.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-blend-mode: lighten;
-  background-attachment: fixed;
-  background-position: left top;
+    font-family: 'nexa_scriptlight';
+    font-size: larger;
+    padding: 1em;
 }
 
-header{
-  margin: 0;
+h1{
+    font-family: 'nexa_scriptheavy';
+    font-size: 3.5em;
+    padding: 0.1em;
 }
 
-header p{
-  font-size: 2em;
-}
+section{}
 
-header div{
-  display: inline-block;
-  padding: 1em;
-  margin-left: 1em;
-}
-
-#logo{
-  font-family: 'minimobold', sans-serif;
-  position: relative;
-  left: 0.8em;
-  top: -0.35em;
-}
-
-#banner{
-  background-color: rgba(0,0,0,0.45);
-  color: #ccc;
-  padding: 0 15px;
-  margin: 0;
-}
-
-h2, h3, h4{
-  color: #000;
-  font-size: 1.4321em;
-}
-
-footer{}
-
-.hList{
-  padding: 1em;
-  background-color: grey;
-}
-
-.topBar{
-  margin-bottom: 2em;
-}
-
-p{
-  color: #000;
-  letter-spacing: initial;
-  text-align: justify;
-  text-justify: inter-word;
-  text-overflow: ellipsis;
-  word-break: keep-all;
-}
-
-p button{
-  color: #333;
-}
-
-a{
-  text-decoration: underline;
-  cursor: pointer;
-  color: black;
-}
-
-a.user-link{
-  font-size: 1.2em;
-  text-decoration: none;
-}
-
-a:visited{
-  color: black;
-}
-
-a:hover{
-  text-decoration: underline;
-}
-
-ul{}
-li{
-  list-style: none;
-}
-
-input{
-  color: black;
-  font-size: 1.2em;
-}
-
-input[type="text"], textarea{
-  width: 50%;
-  border-radius: 5px;
-  padding: 0.5em;
-}
-
-input[type="radio"], input[type="checkbox"]{
-  margin: 0 0.3em;
-}
-
-button, input[type="button"], input[type="submit"]{
-  width: 7em;
-  padding: 0.7em;
-  border-radius: 5px;
-}
-
-input[type="text"]:focus, textarea:focus, button:focus{
-  box-shadow: 0px 0px 3px black;
-}
-
-button:focus{
-  box-shadow: 0px 0px 5px black;
-}
-
-.features ul{
-  list-style-type: square;
-}
-
-.row{
-  margin-left: 0;
-}
-
-@media all and (min-width: 992px){
-  #filters{}
-}
-@media all and (max-width: 991px){
-  #filters{
-    padding: 3.21em;
-  }
+aside{
+    position: fixed;
+    right: 1em;
+    top: 4em;
+    width: 160px;
+    height: 600px;
 }
