--- a/app/css/fonts/nexascript_heavy_macroman/stylesheet.css
+++ b/app/css/fonts/nexascript_heavy_macroman/stylesheet.css
@@ -9,27 +9,27 @@
  * copyright law. You are prohibited from modifying, reverse engineering, duplicating, or
  * distributing this font software.
  *
- * (c) 2010-2014 Fontspring
+ * (c) 2010-2015 Fontspring
  *
  *
  *
  *
  * The fonts included are copyrighted by the vendor listed below.
  *
- * Vendor:      The Questa Project
- * License URL: http://www.fontspring.com/licenses/the-questa-project/webfont
+ * Vendor:      Fontfabric
+ * License URL: http://www.fontspring.com/licenses/fontfabric/webfont
  *
  *
  */
 
 @font-face {
-    font-family: 'questaregular';
-    src: url('2-Questa_Regular-webfont.eot');
-    src: url('2-Questa_Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('2-Questa_Regular-webfont.woff2') format('woff2'),
-         url('2-Questa_Regular-webfont.woff') format('woff'),
-         url('2-Questa_Regular-webfont.ttf') format('truetype'),
-         url('2-Questa_Regular-webfont.svg#questaregular') format('svg');
+    font-family: 'nexa_scriptheavy';
+    src: url('nexascript-heavy-webfont.eot');
+    src: url('nexascript-heavy-webfont.eot?#iefix') format('embedded-opentype'),
+         url('nexascript-heavy-webfont.woff2') format('woff2'),
+         url('nexascript-heavy-webfont.woff') format('woff'),
+         url('nexascript-heavy-webfont.ttf') format('truetype'),
+         url('nexascript-heavy-webfont.svg#nexa_scriptheavy') format('svg');
     font-weight: normal;
     font-style: normal;
 
