--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10,7 +10,10 @@ h1{
     padding: 0.1em;
 }
 
-section{}
+section{
+    padding: 1em;
+    width: 43em;
+}
 
 aside{
     position: fixed;
@@ -26,5 +29,5 @@ form{
 
 input,textarea{
     margin-top: 1em;
-    width: 12em;
+    width: 43em;
 }
