--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,6 +3,7 @@ body{
     font-size: larger;
     padding: 1em;
     background-image: url(../images/paint.jpeg);
+    background-position: 50% 0%;
 }
 
 h1{
