--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,6 +4,7 @@ body{
     padding: 1em;
     background-image: url(../images/paint.jpeg);
     background-position: 50% 0%;
+    background-size: 10%;
 }
 
 h1{
